--- a/files/supervisord.conf.tmpl
+++ b/files/supervisord.conf.tmpl
@@ -30,6 +30,8 @@ numprocs=1
 numprocs_start=0
 redirect_stderr=true
 stdout_logfile=%(here)s/../log/%(program_name)s.log
+stdout_logfile_maxbytes=100MB
+stdout_logfile_backups=10
 startsecs=10
 
 [program:tsunamid]
@@ -41,6 +43,8 @@ numprocs=1
 numprocs_start=0
 redirect_stderr=true
 stdout_logfile=%(here)s/../log/%(program_name)s.log
+stdout_logfile_maxbytes=100MB
+stdout_logfile_backups=10
 startsecs=10
 
 [program:instance_stats]
@@ -52,6 +56,8 @@ numprocs=1
 numprocs_start=0
 redirect_stderr=true
 stdout_logfile=%(here)s/../log/%(program_name)s.log
+stdout_logfile_maxbytes=100MB
+stdout_logfile_backups=10
 startsecs=10
 
 [program:{{ project }}-job_worker-small]
